feat: added headers to avoid yt block

--- a/configurations/configurations.json
+++ b/configurations/configurations.json
@@ -1,5 +1,5 @@
 {
-  "folder_path": "C:/Users/Tinelli/Music/backgroundMusics",
+  "folder_path": "C:/Users/Vitor Tinelli/Downloads",
   "quality": "best",
   "output": "{folder_path}/%(title)s.%(ext)s"
 }
